# libxcrypt

./: .gitignore  .packit.yaml  .perlcriticrc  .perltidyrc  .travis.dnf.conf.rawhide_latest  .travis.env.in  .travis.yml  .travis_after_success.sh  .travis_before_install.sh  .travis_before_script.sh  .travis_install.sh  .travis_script.sh  AUTHORS  COPYING  ChangeLog  LICENSE.bcrypt  LICENSING  Makefile.am  NEWS  README  README.bcrypt  README.md  THANKS  TODO  TODO.md  alg-des-mktables.c  alg-des-tables.c  alg-des.c  alg-des.h  alg-gost3411-2012-const.h  alg-gost3411-2012-core.c  alg-gost3411-2012-core.h  alg-gost3411-2012-hmac.c  alg-gost3411-2012-mmx.h  alg-gost3411-2012-precalc.h  alg-gost3411-2012-sse2.h  alg-gost3411-2012-sse41.h  alg-hmac-sha1.c  alg-hmac-sha1.h  alg-md4.c  (+130 more)
.github/actions/build-steps/: action.yml
.github/workflows/: codecov.yml  codeql.yml  config-matrix.yml  coverity.yml  distcheck.yml  memcheck.yml
build-aux/: BuildCommon.pm  ax_gcc_func_attribute.m4  ax_valgrind_check.m4  check-perlcritic-config  ci-log-dependency-versions  compute-symver-floor  configure-wrapper  expand-selected-hashes  gcov-wrapper  gen-crypt-h  gen-crypt-hashes-h  gen-crypt-symbol-vers-h  gen-libcrypt-map  pkg_installdir_compat.m4  skip-if-exec-format-error  summarize-coverage  travis-after-success  travis-before  travis-build  travis-install  zw_detect_asan.m4  zw_static_assert.m4
build-aux/ci/: ci-log-dependency-versions  ci-log-logfiles  clang-gcov-wrapper  configure-wrapper  summarize-coverage
build-aux/m4/: ax_valgrind_check.m4  pkg_compat.m4  zw_automodern.m4  zw_endianness.m4  zw_prog_perl.m4  zw_simple_warnings.m4
build-aux/scripts/: BuildCommon.pm  compute-symver-floor  gen-crypt-h  gen-crypt-symbol-vers-h  gen-libcrypt-map
doc/: crypt-checkconf.8  crypt-tune-costs.8  crypt.3  crypt.5  crypt.conf.5  crypt_checksalt.3  crypt_gensalt.3  crypt_preferred_method.3  man.css  meson.build
doc/scripts/: mdoc2html
lib/: alg-argon2-blamka.h  alg-argon2-core.c  alg-argon2-core.h  alg-argon2-encoding.c  alg-argon2-encoding.h  alg-argon2-ref.c  alg-argon2-renames.h  alg-argon2-thread.c  alg-argon2.c  alg-argon2.h  alg-blake2b.c  alg-blake2b.h  alg-des-tables.c  alg-des.c  alg-des.h  alg-gost3411-2012-core.c  alg-gost3411-2012-core.h  alg-gost3411-2012-hmac.c  alg-gost3411-2012-hmac.h  alg-gost3411-2012-precalc.h  alg-hmac-sha1.c  alg-hmac-sha1.h  alg-md4.c  alg-md4.h  alg-md5.c  alg-md5.h  alg-sha1.c  alg-sha256.c  alg-sha256.h  alg-sha512.c  alg-sha512.h  alg-sm3-hmac.c  alg-sm3-hmac.h  alg-sm3.c  alg-sm3.h  alg-yescrypt-common.c  alg-yescrypt-opt.c  alg-yescrypt-platform.c  alg-yescrypt.h  byteorder.h  (+96 more)
m4/: ax_prog_cc_for_build.m4  ax_tls.m4  zw_alignment.m4  zw_automodern.m4  zw_endianness.m4  zw_ld_wrap.m4  zw_shlib_flags.m4  zw_simple_warnings.m4  zw_static_assert.m4
plugins/: Makefile.am  plugin.map  xcrypt-plugin.h
plugins/blowfish/: Makefile.am  blowfish-test.c  crypt_blowfish.c
plugins/md5/: Makefile.am  md5-crypt.c  md5.c  md5.h  md5c-test.c  md5test.c
plugins/sha256/: Makefile.am  sha256-crypt.c  sha256.c  sha256c-test.c  sha256test.c
plugins/sha512/: Makefile.am  sha512-crypt.c  sha512.c  sha512c-test.c
scripts/: check-cpp-dD  check-ld-vscript  check-ld-wrap  common.py  compute-symbol-renames  compute-symver-floor  detect-object-format  expand-selected-hashes  gen-crypt-h  gen-crypt-hashes-h  gen-crypt-symbol-vers-h  gen-libcrypt-map  install-symlink  meson.build  rename-internal-symbols  test-symbols-compat  test-symbols-compat.py  test-symbols-renames  test-symbols-renames.py  test-symbols-static  test-symbols-static.py  travis-after-success  travis-build  travis-install
src/: Makefile.am  alg-des.c  alg-md5.c  alg-sha256.c  bcrypt.c  bcrypt.h  bigcrypt-test.c  bigcrypt.c  blowfish-test.c  byteorder.h  cert.c  cert.sh  crypt-bcrypt.c  crypt-des.c  crypt-entry.c  crypt-gensalt.c  crypt-obsolete.h  crypt-private.h  crypt-sha512.c  crypt.c  crypt.h  crypt_blowfish.c  crypt_blowfish.h  crypt_gensalt.c  crypt_util.c  des-crypt.c  des-mktables.c  des-obsolete.c  des-tables.c  des.c  des.h  gensalt-test.c  libc-symbols.h  libxcrypt.map  md5-crypt.c  md5.c  md5.h  ow-crypt.h  sha256-crypt.c  sha256.c  (+24 more)
test/: TestCommon.pm  alg-argon2-coverage.c  alg-argon2.c  alg-blake2b.c  alg-des.c  alg-gost3411-2012-hmac.c  alg-gost3411-2012.c  alg-hmac-sha1.c  alg-md4.c  alg-md5.c  alg-pbkdf-hmac-sha256.c  alg-sha1.c  alg-sha256.c  alg-sha512.c  alg-sm3-hmac.c  alg-sm3.c  alg-yescrypt.c  badsalt.c  badsetting.c  byteorder.c  checksalt.c  compile-strong-alias.c  crypt-argon2.c  crypt-badargs.c  crypt-gost-yescrypt.c  crypt-kat-gen.py  crypt-kat.c  crypt-kat.inc  crypt-multithread.c  crypt-sm3-yescrypt.c  des-cases.h  des-obsolete.c  des-obsolete_r.c  explicit-bzero.c  fcrypt-enosys.c  gensalt-extradata.c  gensalt-nthash.c  gensalt.c  getrandom-fallbacks.c  getrandom-interface.c  (+14 more)
